@@ -54,7 +54,7 @@ testUbuntuIncrement() {
     checkUbuntuVersion "-i" "5.6-7" "5.6-7ubuntu1"
     checkUbuntuVersion "-i" "5.6-7.1" "5.6-7.1ubuntu1"
     checkUbuntuVersion "-i" "5.6-7.1.8" "5.6-7.1.8ubuntu1"
-    checkUbuntuVersion "-i" "2.13-14build5" "2.13-14build6"
+    checkUbuntuVersion "-i" "2.13-14build5" "2.13-14ubuntu1"
     checkUbuntuVersion "-i" "0.45-2ubuntu3" "0.45-2ubuntu4"
     checkUbuntuVersion "-i" "0.45-2ubuntu3.1" "0.45-2ubuntu3.2"
     checkUbuntuVersion "-i" "0.45-2ubuntu3.1.0" "0.45-2ubuntu3.1.1"
